# client

./: .eslintrc.cjs  .gitignore  CONTRIBUTING  README.md  bun.lockb  components.json  index.html  package.json  searchbar.html  tailwind.config.js  vite.config.js
.github/workflows/: main.yml
src/: main.jsx  searchbar.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cron.rs  db_connection.rs  db_diesel.rs  litex  mac_commands.rs  mac_ocr.rs  main.rs  ns_panel.rs  old_db_connection.rs  permission.rs  preference.rs  screenshot.rs  store.rs  system_tray.rs  utils.rs
src/components/: ThemeToggle.jsx
src/components/Dashboard/: Layout.jsx
src/components/Landing/: Welcome.jsx
src/components/Landing/Stepper/: Account.jsx  Permissions.jsx  index.jsx
src/components/Preference/: Accessibility.jsx  Hotkey.jsx  Wrapper.jsx
src/components/Recorder/: Form.jsx  Settings.jsx  TagifyComponent.jsx  Wrapper.jsx
src/components/Replay/: Combobox.jsx  Datepicker.jsx  ImageSlider.jsx  Loader.jsx  Panel.jsx  PlayerLogic.jsx  PlayerUI.jsx  SearchBar.jsx  SingleScreenshot.jsx  StitchDialog.jsx  Wapper.jsx
src/components/ui/: button.jsx  calendar.jsx  card.jsx  command.jsx  dialog.jsx  input.jsx  popover.jsx  select.jsx  separator.jsx  slider.jsx  textarea.jsx  toggle.jsx
src/lib/: infrTools.js  reactUtils.js  telemetry.js  time.js
src/pages/dashboard/: index.jsx  preference.jsx  recorder.jsx  replay.jsx
src/pages/join/: index.jsx
src/pages/landing/: index.jsx
src/tools/: AppData.js
