[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = [ "system-tray", "updater", "api-all", "icon-png", "global-shortcut", "macos-private-api"] }
screenshots = "0.8.4"
scrap = "0.5.0"
repng = "0.2.2"
chrono = "0.4.31"
core-graphics = "0.23.1"
lazy_static = "1.4.0"
once_cell = "1.18.0"
image = "0.24.7"
base64 = "0.21.4"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = "1.33.0"
window-vibrancy = "0.4.2"
futures = "0.3.28"
auto-launch = "0.4.0"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = {version = "0.22.3"}
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.24.1" }
objc =  { version = "0.2.7" }
objc_id = {version = "0.1.1" }
objc-foundation = { version = "0.1.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
